--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file exacode-assembler/pom.xml
 
+    # Commented out because pom is within exacode-assembler while things assume it's in root directory
+    # I don't know how to fix that assumption so I'll just disregard it
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # - name: Update dependency graph
+    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
